--- a/src/pages/jury.html
+++ b/src/pages/jury.html
@@ -25,7 +25,7 @@
             <li class="nav-item"><a key="2" href="./presentation.html">Présentation</a></li>
             <li class="nav-item"><a key="3" href="./reglement.html">Réglement du concours</a></li>
             <li class="nav-item"><a key="4" href="./jury.html" class="menu-selected">JURY</a></li>
-            <li class="nav-item"><a key="5" href="./prix.html">PRIX</a></li>
+            <!-- <li class="nav-item"><a key="5" href="./prix.html">PRIX</a></li> -->
         </ul>
     </div>
     <nav class="navbar navbar-dark navbar-back p-3 fixed-top">
@@ -46,132 +46,70 @@
             <div class="carousel-cell">
                 <div class="content p-md-5">
                     <div class="container-fluid" style="overflow-y: scroll;">
-                        <div class="row text-white">
-                            <div class="col-md-12 mb-5 jury">
-                                <h1 dir="auto" key="title">JURY</h1>
+                        <div class="row text-white ju">
+                            <div class="col-md-6 jury" key="jury-left">
+                                <img src="../images/jury-left.svg" width="100%" alt="">
+                            </div>
+                            <div class="col-md-6 animate__animated animate__bounceInUp animate__delay-2s d-flex flex-column jury" key="jury-right">
+                               <img src="../images/jury-right.svg" width="100%" alt="">
                             </div>
                         </div>
-                        <div class="row text-white">
-                            <div class="col-md-6 jury">
-                                <h4 class="text-white animate__animated animate__bounceInLeft" dir="auto" key="hero"><img class="quote p-2" src="../images/icons/quote1.svg" alt="">Le jury est une instance souveraine qui ne doit comporter aucun conflit d’intérêt, ni être soumis à une quelconque influence. <img class="quote p-2" src="../images/icons/quote2.svg"
-                                        alt=""></h4>
-                                <ul class="animate__animated animate__bounceInLeft animate__delay-1s" dir="auto" key="text">
-                                    <li>• Le jury a pour mission de sélectionner les finalistes et de désigner les lauréats selon les critères de sélection définis à l’article.
-                                    </li><br>
-                                    <li>• Le jury examine les œuvres et les travaux des candidats de manière anonyme en se fondant exclusivement sur les critères indiqués dans le règlement du concours. L’anonymat est de mise jusqu’à la proclamation finale des résultats.
-                                    </li><br>
-                                    <li>• Chaque membre du jury notera les idées de projets individuellement, sans concertation avec les autres membres du jury, par la suite une sélection se fera  par le jury final des 3 meilleures idées de projets par catégorie et d’autres 3 meilleurs toutes catégories confondues.</li>
-                                </ul>
-                            </div>
-                            <div class="col-md-6 animate__animated animate__bounceInUp animate__delay-2s d-flex flex-column jury">
-                                <button class="py-1 px-5 rounded btn-2" dir="auto" key="critere-title" style="color: #3A1E3A; font-weight: 800;">LES CRITERES DE SELECTION</button><br><br>
-                                <p dir="auto" key="critere-desc">Le jury a été sélectionné en réponse à 5 critères : <br><br>
-                                    <span style="color: #98A6D4;" class="h2">1.</span> Expertise solide dans leurs domaines de compétences.<br>
-                                    <span style="color: #98A6D4;" class="h2">2.</span> Notoriété <br>
-                                    <span style="color: #98A6D4;" class="h2">3.</span> Crédibilité <br>
-                                    <span style="color: #98A6D4;" class="h2">4.</span> Expérience internationale <br>
-                                    <span style="color: #98A6D4;" class="h2">5.</span> Approche entrepreneuriale dans l’exercice de leurs activités.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="mt-5 row text-white">
-                            <div class="col-md-12 mb-5 comite">
-                                <h1 dir="auto" key="title">COMITE SCIENTIFIQUE</h1>
-                            </div>
-                        </div>
-                        <div class="row text-white comite">
-                            <div class="col-md-5 py-5 comite">
-                                <h4 class="text-white" dir="auto" key="hero"><img class="quote p-2" src="../images/icons/quote1.svg" alt="">
-                                    Le comité scientifique examine toutes les candidatures reçues et les filtre,
-                                    rejetant celles non conformes et validant celles qui répondent aux exigences du
-                                    concours, le jury intervient à l’étape suivante pour notation et évaluation.<img
-                                        class="quote p-2" src="../images/icons/quote2.svg" alt=""></h4>
-                            </div>
-                            <div class="col-sm-12 col-md text-center" dir="auto" key="com-1">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/youssef.png"
-                                    alt="">
-                                <p class="">
-                                    <span class="comite-name">M. YOUSSEF JAJILI</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Journaliste / Ecrivain</li>
-                                    <li>• Expert en Communication</li>
-                                    <li>• Crédibilité et Notoriété</li>
-                                    <li>• Expérience dans les Médias</li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-12 col-md text-center" dir="auto" key="com-2">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/hassan.png" alt="">
-                                <p class="">
-                                    <span class="comite-name">M. HASSAN LAHLOU</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Consul honoraire de la république de croitie à casablanca.</li>
-                                    <li>• Président de african business developpement</li>
-                                    <li>• Président fondateur de l’association de développement en afrique</li>
-                                    <li>• Entrepreneur</li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-12 col-md text-center" dir="auto" key="com-3">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/nabil.png" alt="">
-                                <p class="">
-                                    <span class="comite-name">M. NABIL JEBBARI</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Producteur auteur et metteur en scène</li>
-                                    <li>• Entrepreneur Culture</li>
-                                    <li>• Maîtrise de la ville de Casablanca</li>
-                                    <li>• Pluridisciplinaire</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="row text-white mt-5">
-                            <div class="col-md-12 mb-5 jury-members ">
-                                <h1 dir="auto" key="title">MEMBRES DU JURY</h1>
+                        <div class="row text-white ju pt-5">
+                            <div class="col-md-5 py-5" key="comite-left">
+                                <img src="../images/comite-left.svg" width="100%" alt="">
+                            </div> 
+                            <div class="col-md-7">
+                                <div class="row">
+                                    <div class="col-md-4" key="com-1">
+                                        <img src="../images/com-1.svg" width="100%" alt="">
+                                    </div>
+                                    <div class="col-md-4" key="com-2">
+                                        <img src="../images/com-2.svg" width="100%" alt="">
+                                    </div>
+                                    <div class="col-md-4" key="com-3">
+                                        <img src="../images/com-3.svg" width="100%" alt="">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="mt-5 row text-white g-2 jury-members">
+                            <div class="col-md-12 mb-5" key="title">
+                                <h2 style="font-size: 45px;">MEMBRES DU JURY</h2>
+                            </div>
+                            <div dir="auto" key="j12" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/hind.png" alt=""> <p class=""> <span class="vert">Mme. HIND LAIDI</span> <br> </p> <span style="font-size: 18px; color: #98A6D4;">PRESIDENTE DU JURY</span> <ul> <li>• Fondatrice et Présidente De l'association JOUD</li> </ul>  
+                            </div>
                             <div dir="auto" key="j1" class="col-md-3 mb-5 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lkhmari.png" alt=""><p class=""> <span class="vert">M. NOUR-EDDINE LAKHMARI</span> <br> </p> <ul> <li>• Cinéaste, réalisateur et Producteur</li> <li>• Norvégo-marocain résidant à Casablanca</li> <li>• Expérience Audiovisuelle importante</li> <li>• Connu pour ses films réalisés à Casablanca</li> </ul>
                             </div>
                             <div dir="auto" key="j8" class="col-md-3 mb-5 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/oudaha.png" alt=""> <p class=""> <span class="vert">M. MOHAMED OUDAHA</span> <br> </p> <ul> <li>• Publicitaire international</li> <li>Directeur de Création lauréat et membre du jury du « Lion d’Or » au Festival de Cannes de la publicité</li> </ul>
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/oudaha.png" alt=""> <p class=""> <span class="vert">M. MOHAMED OUDAHA</span> <br> </p> <ul> <li>• Publicitaire international</li> <li>Directeur de Création lauréat et membre du jury du « Lion d'Or » au Festival de Cannes de la publicité</li> </ul>
                             </div>
                             <div dir="auto" key="j2" class="col-md-3 mb-5 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/karim.png" alt=""> <p class=""> <span class="vert">Dr. KARIM ADYEL</span> <br> </p> <ul><li>• Avocat</li><li>• Docteur d’Etat en Droit international</li><li>• Arbitre au Tribunal Arbitral du Sport (TAS)</li></ul> 
-                            </div>
-                            <div dir="auto" key="j10" class="col-md-3 mb-5 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/mazned.png" alt=""> <p class=""> <span class="vert text-uppercase">M. Brahim El Mazned</span> <br> </p> <ul> <li>• Entrepreneur Culturel</li> <li>• Fondateur de Visa For Music</li> <li>• Directeur du Festival Timitar</li> <li>• Expert auprès de l’UNESCO</li> </ul>
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/karim.png" alt=""> <p class=""> <span class="vert">Dr. KARIM ADYEL</span> <br> </p> <ul><li>• Avocat</li><li>• Docteur d'Etat en Droit international</li><li>• Arbitre au Tribunal Arbitral du Sport (TAS)</li></ul> 
                             </div>
                             <div dir="auto" key="j3" class="col-md-3 mb-5 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/derhem.png" alt=""> <p class=""> <span class="vert">M. MOHAMED DERHEM</span> <br> </p> <ul> <li>• ARTISTE</li> <li>• Leader du groupe Jil Jilala</li></ul> 
                             </div>
                             <div dir="auto" key="j4" class="col-md-3 mb-5 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lahlou.png" alt=""> <p class=""> <span class="vert">M. HICHAM LAHLOU</span> <br> </p> <ul> <li>• Désigner international</li> <li>• Président de l’Africa Design Organisation</li> </ul>
-                            </div>
-                            <div dir="auto" key="j7" class="col-md-3 mb-5 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/mouna.png" alt=""> <p class=""> <span class="vert">Mme. MOUNA HACHIM</span> <br> </p> <ul> <li>• Auteure et Ecrivaine</li></ul>
-                            </div>
-                            <div dir="auto" key="j5" class="col-md-3 mb-5 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/abid.png" alt=""> <p class=""> <span class="vert">M. SAAD ABID</span> <br> </p> <ul> <li>• Environnementaliste, Entrepreneur Social et Aventurier</li> </ul>
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lahlou.png" alt=""> <p class=""> <span class="vert">M. HICHAM LAHLOU</span> <br> </p> <ul> <li>• Désigner international</li> <li>• Président de l'Africa Design Organisation</li> </ul>
                             </div>
                             <div dir="auto" key="j9" class="col-md-3 mb-5 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/jall.png" alt=""> <p class=""> <span class="vert">M. MOHAMED JALL</span> <br> </p> <ul> <li>• Architecte et Designer international</li> </ul>
                             </div>
+                            <div dir="auto" key="j11" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" height="120px" width="120px" src="../images/comite/adnane.png" alt=""> <p class=""> <span class="vert">M. AZIZ DADANE</span> <br> </p> <ul> <li>• Président du Directoire de S2M et Président de l'Association Nagham</li> </ul>
+                            </div>
                             <div dir="auto" key="j6" class="col-md-3 mb-5 text-center">
                                 <img class="mb-3 rounded-circle" width="120px" src="../images/comite/nezha.png" alt=""> <p class=""> <span class="vert">Mme. NEZHA BELKADY</span> <br> </p> <ul> <li>• Entrepreneur Culturelle</li></ul>
                             </div>
-                            <div dir="auto" key="j11" class="col-md-3 mb-5 text-center">
-                                <img class="mb-3 rounded-circle" height="120px" width="120px" src="../images/comite/adnane.png" alt=""> <p class=""> <span class="vert">M. AZIZ DADANE</span> <br> </p> <ul> <li>• Président du Directoire de S2M et Président de l’Association Nagham</li> </ul>
+                            <div dir="auto" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/gamal.png" alt="">
+                                <p class=""> <span class="vert">M. Yassine Gamal</span> <br> </p> <ul> <li>• Membre du mouvement OTED, initiative dédiée au développement et l'innovation territoriale</li> <li>• Expert international en Developpement de Marché et en Management de l'innovation</li> </ul>
                             </div>
-                            <div dir="auto" key="j12" class="col-md-3 mb-5 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/hind.png" alt=""> <p class=""> <span class="vert">Mme. HIND LAIDI</span> <br> </p> <ul> <li>• Présidente de l’Association Jood</li> </ul>  
-                            </div>
-                            <div dir="auto" key="j13" class="col-md-3 mb-5 text-center">
-                                <div style="width: 120px; height: 120px;" class="rounded-circle bg-secondary mb-3 mx-auto"></div> <p class=""> <span class="vert  text-uppercase">M. Yassine Gamal </span> <br> </p> <ul> <li>• Membre du mouvement OTED, initiative dédiée au développement et l’innovation territoriale</li> <li>• Expert international en Developpement de Marché et en Management de l’innovation</li> </ul>
+                            <div dir="auto" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/rabha.png" alt="">
+                                <p class=""> <span class="vert">Mme. RABHA ZAHID</span> <br> </p> <ul> <li>• Chef de la Division culture au sein du Conseil de la ville de Casablanca </li> <li>• Ex Inspectrice régionale des Monuments historiques et sites de Casablanca.</li> </ul>
                             </div>
                         </div>
                         <div class="row">
