--- a/src/pages/presentation.html
+++ b/src/pages/presentation.html
@@ -27,7 +27,7 @@
             <li class="nav-item"><a key="2" href="./presentation.html" class="menu-selected">Présentation</a></li>
             <li class="nav-item"><a key="3" href="./reglement.html">Réglement du concours</a></li>
             <li class="nav-item"><a key="4" href="./jury.html">JURY</a></li>
-            <li class="nav-item"><a key="5" href="./prix.html">PRIX</a></li>
+            <!-- <li class="nav-item"><a key="5" href="./prix.html">PRIX</a></li> -->
         </ul>
     </div>
     <nav class="navbar navbar-dark navbar-back p-3 fixed-top">
@@ -49,9 +49,9 @@
                 <div class="content p-md-5">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-6 d-flex flex-column justify-content-center">
-                                <img class="animate__animated animate__bounceInDown animate__slow" src="../images/presentation.svg" width="300px" alt="">
-                                <div class="row desk mt-5 animate__animated animate__fadeIn animate__delay-1s">
+                            <div class="col-md-6 d-flex flex-column justify-content-between">
+                                <img class="animate__animated animate__bounceInDown animate__slow" src="../images/presentation.svg" width="90%" alt="">
+                                <!-- <div class="row desk mt-5 animate__animated animate__fadeIn animate__delay-1s">
                                     <div class="col-md-12 presentation">
                                         <h4 class="text-white" dir="auto" key="partners">Nos Partenaires</h4>
                                     </div>
@@ -63,7 +63,7 @@
                                     </div>
                                     <div class="col-3"><img src="../images/partenaire.png" class="w-100" alt="">
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="col-md-6 d-flex presentation pres flex-column border-left animate__animated animate__fadeIn animate__delay-2s">
                                 <img src="../images/logo-big.png" width="50%" alt=""><br>
