--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li class="nav-item"><a key="2" href="./src/pages/presentation.html">Présentation</a></li>
             <li class="nav-item"><a key="3" href="./src/pages/reglement.html">Réglement du concours</a></li>
             <li class="nav-item"><a key="4" href="./src/pages/jury.html">JURY</a></li>
-            <li class="nav-item"><a key="5" href="./src/pages/prix.html">PRIX</a></li>
+            <!-- <li class="nav-item"><a key="5" href="./src/pages/prix.html">PRIX</a></li> -->
         </ul>
     </div>
     <nav class="navbar p-3 fixed-top">
@@ -47,7 +47,6 @@
             <div class="col-md-4"><img src="./src/images/icons/social.svg" alt=""></div>
         </div>
       </div>
-    <script src="./src/js/jquery-3.5.1.min.js"></script>
     <script src="./src/js/main.js"></script>
     <script src="./src/js/video-background.js"></script>
    <script>
