--- a/src/pages/participer.html
+++ b/src/pages/participer.html
@@ -27,7 +27,7 @@
             <li class="nav-item"><a key="2" href="./presentation.html" class="menu-selected">Présentation</a></li>
             <li class="nav-item"><a key="3" href="./reglement.html">Réglement du concours</a></li>
             <li class="nav-item"><a key="4" href="./jury.html">JURY</a></li>
-            <li class="nav-item"><a key="5" href="./prix.html">PRIX</a></li>
+            <!-- <li class="nav-item"><a key="5" href="./prix.html">PRIX</a></li> -->
         </ul>
     </div>
     <nav class="navbar navbar-dark navbar-back p-3 fixed-top">
